# product-service/src/functions/getProductsById/handler.ts
@@ -1,16 +1,30 @@
-import type { ValidatedEventAPIGatewayProxyEvent } from '@libs/api-gateway';
-import { formatJSONResponse } from '@libs/api-gateway';
-import { getMockProducts } from '@libs/mock-data';
+import type { ValidatedEventAPIGatewayProxyEvent } from "@libs/api-gateway";
+import { formatJSONResponse } from "@libs/api-gateway";
+import { BookService } from "@libs/BookService";
+import { getMockProducts } from "@libs/mock-data";
+import middy from "@middy/core";
+import httpErrorHandler from "@middy/http-error-handler";
+import createError from "http-errors";
 
-import schema from './schema';
+import schema from "./schema";
 
-// TODO: handle errors
-const getProductsById: ValidatedEventAPIGatewayProxyEvent<typeof schema> = async (event) => {
-  const { productId } = event.pathParameters;
-  const products = await getMockProducts();
-  const product = products.find(product => product.id === Number(productId));
-  
-  return formatJSONResponse(product as unknown as Record<string, unknown>);
+const bookService = new BookService(getMockProducts);
+
+const getProductsById: ValidatedEventAPIGatewayProxyEvent<
+  typeof schema
+> = async (event) => {
+  try {
+    const { productId } = event.pathParameters;
+    const product = await bookService.getBookById(Number(productId));
+
+    if (product) {
+      return formatJSONResponse(product as unknown as Record<string, unknown>);
+    }
+  } catch (error) {
+    throw createError(500, `Internal error: ${error}`, { expose: true });
+  }
+
+  throw createError.NotFound("Product not found");
 };
 
-export const main = getProductsById;
+export const main = middy(getProductsById).use(httpErrorHandler());
